package sorts;

public class Sort {
}
